don't use jdk 11 methods